src/test/examples/custom/valid/class/classInstantiationWith3Parameters.wacc
# Simple class instance with 3 parameters

begin
    class Car is
        public string name ;        # Class attributes
        private int passengers ;    
        public bool isDriving
        public bool drive() is      # Class methods
            isDriving = true ;
            return false
        end
    end
    Car car = new Car("Tesla", 5, false) ;    # Instantiating with implicit constructor
    bool driving = call car.drive() ;         # Accessing class attributes and methods
    println car.name ;
    println driving ;
    println car.isDriving    
end